force-app/main/default/objects/Sales_Target__c/Sales_Target__c.object-meta.xml
<CustomObject>
    <label>Sales Target</label>
    <nameField>
        <displayFormat>st-{0000}</displayFormat>
        <label>Sales Target Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>