force-app/main/default/objects/Sales_Target__c/fields/Closed_Commission_Average__c.field-meta.xml
<CustomField>
    <fullName>Closed_Commission_Average__c</fullName>
    <formula>if(AND(NOT(ISBLANK(TotalCommissionForAvgCal__c)),NOT(ISBLANK(Closed_Deals__c)),ISPICKVAL(Type__c,&apos;Service&apos;)),(TotalCommissionForAvgCal__c / Closed_Deals__c)/100 ,0)</formula>
    <label>Closed Commission Average</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>