force-app/main/default/objects/Sales_Target__c/fields/Closed_Deals__c.field-meta.xml
<CustomField>
    <fullName>Closed_Deals__c</fullName>
    <label>Closed Deals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>