force-app/main/default/objects/Sales_Target__c/fields/Commission_Target__c.field-meta.xml
<CustomField>
    <fullName>Commission_Target__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commission Target</label>
    <referenceTo>List_Service_Price__c</referenceTo>
    <relationshipLabel>Sales Targets</relationshipLabel>
    <relationshipName>Sales_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>