force-app/main/default/objects/Sales_Target__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <label>From</label>
    <required>true</required>
    <type>Date</type>
</CustomField>