force-app/main/default/objects/Sales_Target__c/fields/NoOfCommissionInPercent__c.field-meta.xml
<CustomField>
    <fullName>NoOfCommissionInPercent__c</fullName>
    <label>NoOfCommissionInPercent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>