force-app/main/default/objects/Sales_Target__c/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Group</label>
    <referenceTo>List_Product_Group__c</referenceTo>
    <relationshipLabel>Sales Targets</relationshipLabel>
    <relationshipName>Sales_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>