force-app/main/default/objects/Sales_Target__c/fields/Product_Target__c.field-meta.xml
<CustomField>
    <fullName>Product_Target__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Target</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>List_Product_Price__c.CurrencyIsoCode</field>
            <operation>equals</operation>
            <valueField>$Source.CurrencyIsoCode</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>List_Product_Price__c</referenceTo>
    <relationshipLabel>Sales Targets</relationshipLabel>
    <relationshipName>Sales_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>