force-app/main/default/objects/Sales_Target__c/fields/Revenue_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Achieved__c</fullName>
    <label>Revenue Achieved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>