force-app/main/default/objects/Sales_Target__c/fields/Target_Commission_Average__c.field-meta.xml
<CustomField>
    <fullName>Target_Commission_Average__c</fullName>
    <label>Target Commission Average</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>