force-app/main/default/objects/Sales_Target__c/fields/Target_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Product_Name__c</fullName>
    <formula>Product_Target__r.Product_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Product Name</label>
    <type>Text</type>
</CustomField>