force-app/main/default/objects/Sales_Target__c/fields/TotalCommissionForAvgCal__c.field-meta.xml
<CustomField>
    <fullName>TotalCommissionForAvgCal__c</fullName>
    <label>TotalCommissionForAvgCal</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>