force-app/main/default/objects/Sales_Target__c/fields/Units_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Units_Achieved__c</fullName>
    <label>Units Achieved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>