force-app/main/default/objects/Sales_Target__c/recordTypes/DH_AU_Sales_Target.recordType-meta.xml
<RecordType>
    <fullName>DH_AU_Sales_Target</fullName>
    <active>true</active>
    <label>DH AU Sales Target</label>
</RecordType>