force-app/main/default/objects/Sales_Target__c/recordTypes/FI_Sales_Target.recordType-meta.xml
<RecordType>
    <fullName>FI_Sales_Target</fullName>
    <active>true</active>
    <label>FI Sales Target</label>
</RecordType>