force-app/main/default/objects/Sales_Target__c/recordTypes/SE_Sales_Target.recordType-meta.xml
<RecordType>
    <fullName>SE_Sales_Target</fullName>
    <active>true</active>
    <label>SE Sales Target</label>
</RecordType>