force-app/main/default/objects/Sales_Target__c/recordTypes/Talabat_Sales_Target.recordType-meta.xml
<RecordType>
    <fullName>Talabat_Sales_Target</fullName>
    <active>true</active>
    <label>Talabat Sales Target</label>
</RecordType>