force-app/main/default/objects/Sales_Target__c/recordTypes/Yogiyo_Sales_Target.recordType-meta.xml
<RecordType>
    <fullName>Yogiyo_Sales_Target</fullName>
    <active>true</active>
    <label>Yogiyo Sales Target</label>
</RecordType>